--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
 	<div class="container-fluid">
 		<div class ="row">
 			<div class="col-md-4" id="Southern-Serenade">
-				<a href="#">
+				<button onclick="display(0)">
 					Southern Serenade
-				</a>
+				</button>
 			</div>
 			<div class="col-md-4" id="Enchanted-Escape">
-				<a href="#">
+				<button onclick="display(1)">
 					Enchanted Escape
-				</a>
+				</button>
 			</div>
 			<div class="col-md-4" id="Sandy-Suite">
-				<a href="#">
+				<button onclick="display(2)">
 					Sandy Suite
-				</a>
+				</button>
 			</div>
 		</div>
 	</div>
