--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 		<div class ="row">
 			<div class="col-md-4" id="Southern-Serenade">
 				<button onclick="display(0)">
-					Southern Serenade
+					<nobr>Southern <nobr>Serenade
 				</button>
 			</div>
 			<div class="col-md-4" id="Enchanted-Escape">
 				<button onclick="display(1)">
-					Enchanted Escape
+					<nobr>Enchanted <nobr>Escape
 				</button>
 			</div>
 			<div class="col-md-4" id="Sandy-Suite">
 				<button onclick="display(2)">
-					Sandy Suite
+					<nobr>Sandy <nobr>Suite
 				</button>
 			</div>
 		</div>
@@ -89,6 +89,20 @@
 			<span class="glyphicon glyphicon-phone-alt">420-105-007</span>
 		</a>
 	</div>
+	<h2 id="roomName"></h2>
+	<p id="desc"></p>
+	<figure class="photo">
+		<img src="" id="photo" alt="room photo">
+	</figure>
+
+
+	<section>
+		<h3>Cost</h3>
+		<p>Weekday <span id="weekday">$000.00</span></p>
+		<p>Weekend <span id="weekday">$000.00</span></p>
+		<a href="#" class="reserve">Make a Reservation</a>
+	</section>
+
 
 
 <script type="text/javascript" src="js/main.js"></script>
