--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 
 
 <script type="text/javascript" src="js/main.js"></script>
-<script src="../js/jquery-3.5.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!--<script src="../js/jquery-3.5.1.min.js"></script>-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
