--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				<span>* Call-Us</span>
 			</div>
 			
-		  <button id="button" 
+		  <button 
+		  		  id="button" 
 		  		  class="navbar-toggler visible-xs" 
 				  type="button" 
 				  data-toggle="collapse" 
@@ -47,17 +48,17 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		  	<ul class="navbar-nav navbar-right" id="button-list">
 		  		<li class="nav-item active">
-		  			<a href="#" class="nav-link">
+		  			<a onclick="display(0)" class="nav-link">
 		  				<nobr>Southern </nobr>Serenade
 		  			</a>
 		  		</li>
 		  		<li class="nav-item">
-		  			<a href="#" class="nav-link">
+		  			<a onclick="display(1)" class="nav-link">
 		  				<nobr>Enchantred </nobr>Escape
 		  			</a>
 		  		</li>
 		  		<li class="nav-item">
-		  			<a href="#" class="nav-link">
+		  			<a onclick="display(2)" class="nav-link">
 		  				<nobr>Sandy </nobr>Suite
 		  			</a>
 		  		</li>
