--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
 		<a href="#" class="reserve">Make a Reservation</a>
 	</section>
 
+	<section>
+		<h2>Amenities</h2>
+		<div id="details">
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+		</div>
+	</section>
+
 
 
 <script type="text/javascript" src="js/main.js"></script>
