--- a/index.html
+++ b/index.html
@@ -93,36 +93,38 @@
 			<span class="glyphicon glyphicon-phone-alt">420-105-007</span>
 		</a>
 	</div>
-	<div id="room">
-		<h2 id="roomName">Room Name</h2>
-		<p id="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</p>
-	</div>
-	<div class="container">
-		<figure class="photo">
-			<img src="" id="photo" alt="room photo">
-		</figure>
-	</div>
+	<main>
+		<div id="room">
+			<h2 id="roomName">Room Name</h2>
+			<p id="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+			</p>
+		</div>
+		<div class="container">
+			<figure class="photo">
+				<img src="" id="photo" alt="room photo">
+			</figure>
+		</div>
 
-	<div class="container" id="container2">
-		<div class="row">
-			<div id="cost-section">
-				<h3>Cost</h3>
-				<p>Weekday <span id="weekday">$000.00</span></p>
-				<p>Weekend <span id="weekend">$000.00</span></p>
-			</div>
+		<div class="container" id="container2">
+			<div class="row">
+				<div id="cost-section">
+					<h3>Cost</h3>
+					<p>Weekday <span id="weekday">$000.00</span></p>
+					<p>Weekend <span id="weekend">$000.00</span></p>
+				</div>
 
-			<div id="amenities-section">
-				<h3>Amenities</h3>
-				<div id="details">
-					<p>Simple Item 1</p>
-					<p>Simple Item 2</p>
-					<p>Simple Item 3</p>
-					<p>Simple Item 4</p>
+				<div id="amenities-section">
+					<h3>Amenities</h3>
+					<div id="details">
+						<p>Simple Item 1</p>
+						<p>Simple Item 2</p>
+						<p>Simple Item 3</p>
+						<p>Simple Item 4</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</main>
 
 	<footer>
 		<div>
