--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
 				<div id="amenities-section">
 					<h3>Amenities</h3>
 					<div id="details">
-						<p>Simple Item 1</p>
-						<p>Simple Item 2</p>
-						<p>Simple Item 3</p>
-						<p>Simple Item 4</p>
+						<p>Sample Item 1</p>
+						<p>Sample Item 1</p>
+						<p>Sample Item 1</p>
+						<p>Sample Item 1</p>
+						<p>Sample Item 1</p>
 					</div>
 				</div>
 			</div>
