--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</div>
 		<div class="container">
 			<figure class="photo">
-				<img src="" id="photo" alt="room photo">
+				<img src="img/placeholder.jpg" id="photo" alt="room photo">
 			</figure>
 		</div>
 
