--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-dark bg-dark  navbar-expand-lg  navbar-expand-lg">
+		<nav class="navbar navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">
 				<span class="navbar-brand mb-0 h1">
 					<h1>
@@ -29,11 +29,12 @@
 					</h1>
 				<br>
 				<span id="BBF">Bed and Breakfast and Fun</span>
+				
 			</a>
 			<div id="phone-number2">
-				<span>420-105-007</span><br>
-				<span>* Call-Us</span>
-			</div>
+					<span>420-105-007</span><br>
+					<span>* Call-Us</span>
+				</div>
 			
 		  <button 
 		  		  id="button" 
