--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		  				Southern Serenade
 		  			</a>
 		  		</li>
-		  		<li class="nav-item">
+		  		<li class="nav-item visible-xs">
 		  			<a onclick="display(1)" class="nav-link">
 		  				Enchantred Escape
 		  			</a>
