--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		  	<ul class="navbar-nav navbar-right" id="button-list">
 		  		<li class="nav-item active">
-		  			<a onclick="display(0)" class="nav-link">
+		  			<a onclick="display(0)" class="nav-link"  id="myInput" onfocus="focusFunction()">
 		  				Southern Serenade
 		  			</a>
 		  		</li>
 		  		<li class="nav-item ">
-		  			<a onclick="display(1)" class="nav-link">
+		  			<a onclick="display(1)" class="nav-link"  id="myInput" onfocus="focusFunction()">
 		  				Enchantred Escape
 		  			</a>
 		  		</li>
 		  		<li class="nav-item">
-		  			<a onclick="display(2)" class="nav-link">
+		  			<a onclick="display(2)" class="nav-link" id="myInput" onfocus="focusFunction()">
 		  				Sandy Suite
 		  			</a>
 		  		</li>
