--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<header>
 		<nav class="navbar navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand">
 				<span class="navbar-brand mb-0 h1">
 					<h1>
 						New England Inn
@@ -31,10 +31,12 @@
 				<span id="BBF">Bed and Breakfast and Fun</span>
 				
 			</a>
-			<div id="phone-number2">
+			<div id="phone-number2" >
+				<a href="tel:+420-105-007">
 					<span>420-105-007</span><br>
 					<span>* Call-Us</span>
-				</div>
+				</a>
+			</div>
 			
 		  <button 
 		  		  id="button" 
@@ -90,7 +92,7 @@
 		</div>
 	</div>
 	<div id="phone-number">
-		<a href="#" class="phone-link">
+		<a href="tel:+420-105-007" class="phone-link1">
 			<span class="glyphicon glyphicon-phone-alt">420-105-007</span>
 		</a>
 	</div>
